--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-i18n": "^8.7.0",
     "vue-material": "^1.0.0-beta-10.2"
   },
   "devDependencies": {
